--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>OurBrand New <br>Website Is On It's Way</h1>
         <p>Subscribe for more details.</p>
 
-        <form>
+        <form name="submit-to-google-sheet">
             <input type="email" name="Email" placeholder="Your email id" required>
             <button type="submit"><img src="send-icon.png" width="30px"></button>
         </form>
