--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input type="email" name="Email" placeholder="Your email id" required>
             <button type="submit"><img src="send-icon.png" width="30px"></button>
         </form>
-        <span>Thank You For Subscribing!</span>
+        <span id="msg"></span>
     </div>
 
     <script src="script.js"></script>
